# coffee-atlas-django

./: README.md  pyproject.toml  requirements.txt
coffee_atlas/: manage.py
coffee_atlas/coffee_atlas/: asgi.py  settings.py  urls.py  wsgi.py
coffee_atlas/frontend/: admin.py  models.py  urls.py  views.py
coffee_atlas/frontend/migrations/: 0001_initial.py  0002_alter_country_options_alter_roastery_options_and_more.py  0003_coffee_coffee_image.py  0004_alter_coffee_country_alter_coffee_elevation_and_more.py  0005_place_alter_country_name_alter_farmer_name_and_more.py
coffee_atlas/frontend/templates/: base.html  index.html  map.html
tests/: test_coffee_atlas.py
