[tool.poetry]
name = "coffee-atlas"
version = "0.1.0"
description = ""
authors = ["Radek Dobrovolný <radek.dobrovolny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.6"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
